tests/js_error/source_locations/expression/yield_star/throw_throws.exp
Error: throw
  ┌ tests/js_error/source_locations/expression/yield_star/throw_throws.js:8:15
  |
8 |         throw new Error('throw');
  |               ^
Stack trace:
  at throw (tests/js_error/source_locations/expression/yield_star/throw_throws.js:8:15)
  at generator (tests/js_error/source_locations/expression/yield_star/throw_throws.js:15:3)
  at throw (<native>)
  at <global> (tests/js_error/source_locations/expression/yield_star/throw_throws.js:20:1)